
# Copyright (c) 2008-2010, Regents of the University of Colorado.
# This work was supported by NASA contracts NNJ05HE10G, NNC06CB40C, and
# NNC07CB47C.


include $(top_srcdir)/common.am


ASN_SOURCE = bionet-protocol-0.asn1


include asn_sources.am


BUILT_SOURCES = $(ASN_MODULE_SOURCES) $(ASN_MODULE_HEADS)

lib_LTLIBRARIES=libbionet-asn.la

libbionet_asn_la_SOURCES=bionet-asn-helpers.c bdm-asn-helpers.c $(ASN_MODULE_SOURCES) $(ASN_MODULE_HEADS)

libbionet_asn_la_CPPFLAGS = $(AM_CPPFLAGS) -DBUILDING_LIBBIONET_ASN

libbionet_asn_la_CFLAGS = $(AM_CFLAGS) $(GLIB_CFLAGS) $(CFLAGS_BIONET_UTIL) -fno-strict-aliasing

libbionet_asn_la_LIBADD = $(AM_LDADD) $(LIBS_BIONET_UTIL) $(GLIB_LIBS) -lm 

if ENABLE_WIN32
libbionet_asn_la_LIBADD += -lmsvcrt
endif

libbionet_asn_la_LDFLAGS = $(AM_LDFLAGS) $(LDFLAGS_BIONET_UTIL) 


if ENABLE_EXE

bin_PROGRAMS = test-asn-h2c test-asn-c2h test-asn-bdm-c2s test-asn-bdm-s2c test-asn-sync

test_asn_h2c_DEPENDENCIES = libbionet-asn.la
test_asn_h2c_SOURCES = converter-sample.c pdu_collection.c
test_asn_h2c_CFLAGS = $(AM_CFLAGS) $(GLIB_CFLAGS) -I../util -DASN_PDU_COLLECTION -DPDU=H2C_Message 
test_asn_h2c_LDFLAGS = $(AM_LDFLAGS) $(GLIB_LIBS) -L../util
test_asn_h2c_LDADD = $(AM_LDADD) -lbionet-util -lbionet-asn -lm

test_asn_c2h_DEPENDENCIES = libbionet-asn.la
test_asn_c2h_SOURCES = converter-sample.c pdu_collection.c
test_asn_c2h_CFLAGS = $(AM_CFLAGS) $(GLIB_CFLAGS) -I../util -DASN_PDU_COLLECTION -DPDU=C2H_Message 
test_asn_c2h_LDFLAGS = $(AM_LDFLAGS) $(GLIB_LIBS) -L../util
test_asn_c2h_LDADD = $(AM_LDADD) -lbionet-util -lbionet-asn -lm

test_asn_bdm_c2s_DEPENDENCIES = libbionet-asn.la
test_asn_bdm_c2s_SOURCES = converter-sample.c pdu_collection.c
test_asn_bdm_c2s_CFLAGS = $(AM_CFLAGS) $(GLIB_CFLAGS) -I../util -DASN_PDU_COLLECTION -DPDU=BDM_C2S_Message 
test_asn_bdm_c2s_LDFLAGS = $(AM_LDFLAGS) $(GLIB_LIBS) -L../util
test_asn_bdm_c2s_LDADD = $(AM_LDADD) -lbionet-util -lbionet-asn -lm

test_asn_bdm_s2c_DEPENDENCIES = libbionet-asn.la
test_asn_bdm_s2c_SOURCES = converter-sample.c pdu_collection.c
test_asn_bdm_s2c_CFLAGS = $(AM_CFLAGS) $(GLIB_CFLAGS) -I../util -DASN_PDU_COLLECTION -DPDU=BDM_S2C_Message 
test_asn_bdm_s2c_LDFLAGS = $(AM_LDFLAGS) $(GLIB_LIBS) -L../util
test_asn_bdm_s2c_LDADD = $(AM_LDADD) -lbionet-util -lbionet-asn -lm

test_asn_sync_DEPENDENCIES = libbionet-asn.la
test_asn_sync_SOURCES = converter-sample.c pdu_collection.c
test_asn_sync_CFLAGS = $(AM_CFLAGS) $(GLIB_CFLAGS) -I../util -DASN_PDU_COLLECTION -DPDU=BDM_Sync_Message 
test_asn_sync_LDFLAGS = $(AM_LDFLAGS) $(GLIB_LIBS) -L../util
test_asn_sync_LDADD = $(AM_LDADD) -lbionet-util -lbionet-asn -lm



endif

# 
# this rule removes all the autogenerated code from the asn1c compiler
#

clean-asn1: clean
	rm -f converter-sample.c pdu_collection.c asn1-stamp ${ASN_MODULE_SOURCES} ${ASN_MODULE_HEADS}


# 
# this rule re-runs the asn1c compiler to re-produce all the ASN.1 C code,
# then applies our local patches
#

# Configure with variable REBUILD_ASN=yes
# to have asn messages re-built automatically
if REBUILD_ASN
$(BUILT_SOURCES): asn1-stamp


# This may work if your asn1c generates Makefile.am.sample
# Its only needed when you add/remove data structures
asn_sources.am: Makefile.am.sample
	csplit -f asn_sources.am. Makefile.am.sample '/lib_LTLIBRARIES/'
	sed 's/ASN_MODULE_HEADERS/ASN_MODULE_HEADS/g' < asn_sources.am.00 |\
	       grep -v ASN_CONVERTER_SOURCES >	$@
	rm asn_sources.am.*

endif

rebuild-asn1: asn1-stamp
asn1-stamp: $(ASN_SOURCE) asn_sources.am 
	asn1c -Werror -fnative-types -fskeletons-copy -pdu=auto -gen-PER -fcompound-names $(ASN_SOURCE)
	patch --quiet -p1 < local-patch
	touch $@

