
# Copyright (c) 2008-2010, Regents of the University of Colorado.
# This work was supported by NASA contracts NNJ05HE10G, NNC06CB40C, and
# NNC07CB47C.

include $(top_srcdir)/common.am

bin_PROGRAMS = ping echod bpecho bping

ping_CFLAGS = $(AM_CFLAGS) $(CFLAGS_LIBBPS)

ping_LDFLAGS = $(AM_LDFLAGS) $(LDFLAGS_LIBBPS)

ping_LDADD = $(LIBS_LIBBPS)



echod_CFLAGS = $(AM_CFLAGS) $(CFLAGS_LIBBPS)

echod_LDFLAGS = $(AM_LDFLAGS) $(LDFLAGS_LIBBPS)

echod_LDADD = $(LIBS_LIBBPS)




bpecho_CFLAGS = $(AM_CFLAGS) $(CFLAGS_LIBBPS)

bpecho_LDFLAGS = $(AM_LDFLAGS) $(LDFLAGS_LIBBPS)

bpecho_LDADD = $(LIBS_LIBBPS)


bping_CFLAGS = $(AM_CFLAGS) $(CFLAGS_LIBBPS)

bping_LDFLAGS = $(AM_LDFLAGS) $(LDFLAGS_LIBBPS)

bping_LDADD = $(LIBS_LIBBPS)
