## Process this file with automake to produce Makefile.in

#to do test coverage analysis using gcov, uncomment
#CFLAGS = -g -O0 -Wall -W -fprofile-arcs -ftest-coverage
#CXXFLAGS=-g -O0 -Wall -W -Wshadow -Wunused-variable -Wunused-parameter -Wunused-function -Wunused -Wno-system-headers -Wno-deprecated -Woverloaded-virtual -Wwrite-strings -fprofile-arcs -ftest-coverage
#LDFLAGS=-fprofile-arcs -ftest-coverage -lgcov

SUBDIRS = shared client server