
# Copyright (c) 2008-2009, Regents of the University of Colorado.
# This work was supported by NASA contracts NNJ05HE10G, NNC06CB40C, and
# NNC07CB47C.


#to do test coverage analysis using gcov, uncomment
#CFLAGS = -g -O0 -Wall -W -fprofile-arcs -ftest-coverage
#CXXFLAGS=-g -O0 -Wall -W -Wshadow -Wunused-variable -Wunused-parameter -Wunused-function -Wunused -Wno-system-headers -Wno-deprecated -Woverloaded-virtual -Wwrite-strings -fprofile-arcs -ftest-coverage
#LDFLAGS=-fprofile-arcs -ftest-coverage -lgcov

include $(top_srcdir)/common.am

SUBDIRS = shared client server

